language/move-lang/tests/move_check/parser/global_access_value.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/global_access_value.move:3:13
  │
3 │         1 + ::global_value
  │             ^^
  │             │
  │             Unexpected '::'
  │             Expected an expression term

