language/move-lang/tests/move_check/parser/global_access_value.move
module M {
    fun foo(): u64 {
        1 + ::global_value
    }
}
